# Xmotion

./: .debug_time  .gitignore  .release_time  .sim_time  BUGS.md  Makefile  PlasmaTable  PlasmaTable.conf  README.md  Readme.md  TODO.md  Xmotion  Xmotion-sudo.sh  big_test.nc  config_example.ini  hal_signals.md  launch  leak.out  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c  plot  plot.txt  test.nc  test.pgm  test.plot
Board/: .~lock.BOM.ods#  BOM.ods  PlasmaTable-cache.lib  PlasmaTable.bak  PlasmaTable.kicad_pcb  PlasmaTable.kicad_pcb-bak  PlasmaTable.net  PlasmaTable.pro  PlasmaTable.sch  ReadyArchive.sh  Xmotion-cache.lib  Xmotion.bak  Xmotion.kicad_pcb  Xmotion.kicad_pcb-bak  Xmotion.net  Xmotion.pro  Xmotion.sch  _autosave-PlasmaTable.kicad_pcb  _autosave-Xmotion.kicad_pcb  _saved_PlasmaTable.sch  fp-lib-table
Enclosure/: ENCLOSURE_BOTTOM.MC8  ENCLOSURE_BOTTOM.STL  pcb_enclosure_bottom.stl
SrcImages/: Gauges.xcf  IgnitionButtonOff.xcf  IgnitionButtonOn.xcf  Needle.xcf  RoundButton.xcf
Visualizer/src/: CMakeLists.txt
dxf/: X_Carrier.dxf  Z_Axis.dxf
inc/: CNC.h  Config.h  Debug.h  Motion.h  Render.h  Sender.h  Serial.h  application.h
javascript/: main.js
machinekit_includes/: string.h
scripts/: mount_share  start_cnc
src/: CNC.cpp  Config.cpp  Debug.cpp  License.md  Motion.cpp  Render.cpp  Sender.cpp  Serial.cpp  linuxcnc.c  linuxcnc.cpp  linuxcnc.h  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c  main.cpp  main.h
test/: build  one_step.c  speed_test.c  step_test.c  test  test.cpp  vector  vector.c  write_pin.c
util/: attr.py  error.py  jog.py  (+6 more)
(+313 files in other folders)
